--- a/CaheeFolder/index.html
+++ b/CaheeFolder/index.html
@@ -11,6 +11,8 @@
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/subscribe.css">
+  <link rel="stylesheet" href="css/gallery.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -27,7 +29,7 @@
               <a href="#" class="nav__link">HOME</a>
               <a href="#about" class="nav__link">ABOUT</a>
               <a href="#services" class="nav__link">SERVICES</a>
-              <a href="#" class="nav__link">GALLERY</a>
+              <a href="#gallery" class="nav__link">GALLERY</a>
               <a href="#blog" class="nav__link">BLOG</a>
               <a href="#contact" class="nav__link">CONTACT</a>
             </nav>
@@ -108,6 +110,53 @@
           </div>
         </div>
       </div>
+    </section>
+    <section class="section section--gallery" id="gallery">
+      <div class="container">
+        <h2 class="section__title section__title--dark">Gallery</h2>
+        <p class="section__title section__subtitle--dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo
+          ullam alias nobis neque sint, iure placeat facilis consectetur provident.</p>
+        <div class="gallery__list">
+          <div class="row">
+            <div class="col-8">
+              <div class="gallery__item">
+                <img src="images/gal-1.png" alt="">
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="gallery__item">
+                <img src="images/gal-2.png" alt="">
+              </div>
+              <div class="gallery__item">
+                <img src="images/gal-3.png" alt="">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="gallery__item">
+                <img src="images/gal-4.png" alt="">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="gallery__item">
+                <img src="images/gal-5.png" alt="">
+              </div>
+            </div>
+          </div>
+          <section>
+            <button class="button button--style">VIEW MORE</button>
+          </section>
+        </div>
+      </div>
+      </div>
+    </section>
+    <section class="section section--subscribe ">
+      <h3 class="title title--dark">Subscribe To Us</h3>
+      <p class="subtitle subtitle--dark ">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, nisi? Quae
+        esse soluta sint omnis asperiores saepe perspiciatis quod facilis.</p>
+      <form>
+        <p><input type="text" class="subscribe__form" value="Your email address..." name="email">
+          <button class="subscribe__button">SUBSCRIBE</button></p>
+      </form>
     </section>
     <section class="section section--blog" id="blog">
       <div class="container">
